What's new...

Feb 16/2017 : JF 14.0.0 released!
  - new app : jfDataLoggerPlus
    - this is an app that logs changes to PLC tags similar to jfDataLogger but this is a service for long term data collection
    - data is collected into an SQL database
    - first app to use the new WebUI which is still a work in progress
  - this is the 13th major release of JavaForce ;)

Nov 22/2016 : JF 12.5.0 released!
  - jfDataLogger/0.6
    - minor fixes

Oct 28/2016 : JF 12.4.0 released!
  - fixed NI-DAQmx freq counter logic
  - jfDataLogger/0.5
    - many fixes

Oct 25/2016 : JF 12.3.0 released!
  - fixed NI-DAQmx counter and digital inputs
  - jfDataLogger/0.4
    - improved fault tolerance

Oct 24/2016 : JF 12.2.0 released!
  - added support for National Instruments DAQmx controller
    - javaforce.controls.ni
  - jfDataLogger/0.3
    - support for NI
    - multi-threaded for better performance
  - more webui improvements

Oct 18/2016 : JF 12.1.0 released!
  - fix : s7 tags were limited to block number 127
  - jfDataLogger/0.2
  - forget to mention new support for using GPIO pins on Raspberry Pi
    - see javaforce/pi/Test
    - uses a new WebUI interface that is currently in development

Oct 7/2016 : JF 12.0.0 released!
  - added new Controller library (talk to PLCs)
  - added jfDataLogger/0.1
    - log PLC data
  - added support to build jfLinux with Arch
    - but the build fails in ArchISO somewhere

Jun 4/2016 : JF 11.4.0 released!
  - jfDHCP/0.7
    - new : support for custom options

Jun 2/2016 : JF 11.3.0 released!
  - jPhoneLite/1.10.0
    - added GSM codec

Mar 14/2016 : JF 11.2.0 released!
  - added firewall exceptions in Wix config for services (except jfSTUN which uses dynamic ports)
  - jfProxy/0.6
  - jfDHCP/0.6
  - jfDNS/0.5

Feb 23/2016 : JF 11.1.0 released!
  - VoIP : many improvements to message handling
    - jPhoneLite/1.9.11
      - should fix bug #35
    - jPBXlite/0.26
    - jfBroadcast/0.36